# hypo_free_geometry

./: .gitignore  README.md  clustering_algo.py  compare.py  concept_geometry.py  ground_truth_comp.py  manifold_comp.py  null_cloud.py  pipeline_draft.py  pyproject.toml  topology_metric.py
ground_truth_verification/: llm_activations_extraction.ipynb  manifold_comp.py  months_contextualized_reps_by_layer.npy  months_reps_by_layer.npy  pipeline_activations_extraction.ipynb
